--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-@import "../../MobileFirstForm/css/mixins";
+@import "mixins";
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600);
 
 $background-color: #4CAF52;
