--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html, body {
   max-width: 400px;
   -webkit-transition: max-width 0.3s;
   transition: max-width 0.3s;
-  padding: 25px;
+  padding: 26px;
   box-sizing: border-box;
   color: #777;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.25); }
@@ -39,8 +39,8 @@ html, body {
       max-width: 700px; } }
 
 form {
-  width: calc(100% - 25px / 2);
-  height: calc(100% - 25px / 2);
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
   display: flex;
   flex-flow: column nowrap; }
