--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ form {
   form .form-header {
     margin: 0;
     padding: 0;
+    padding-bottom: 10px;
     font-size: 30px;
     font-weight: 100;
     color: #666;
