--- a/css/style.scss
+++ b/css/style.scss
@@ -57,6 +57,7 @@ form {
 	.form-header {
 		margin: 0;
 		padding: 0;
+		padding-bottom: 10px;
 		font-size: 30px;
 		font-weight: 100;
 		color: #666;
